crates/ars-components/src/utility/snapshots/ars_components__utility__group__tests__group_root_region.snap
---
source: crates/ars-components/src/utility/group.rs
expression: "snapshot_attrs(&Api::new(region_props()).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "group",
            ),
        ),
        (
            Id,
            String(
                "",
            ),
        ),
        (
            Role,
            String(
                "region",
            ),
        ),
    ],
    styles: [],
}
